<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/apptoolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/actionbar_left_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/five_dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Places To Visit"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            android:gravity="center"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/place1Gaimukh"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gaimukh"
                    android:layout_marginBottom="@dimen/ten_dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/place2Fort"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/place3Chandpur"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chandpur_mandir"
                    android:layout_marginBottom="@dimen/ten_dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/place4Madgi"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/madgi"
                    android:layout_marginBottom="@dimen/ten_dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/viewMorePlaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewmore"
                android:padding="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:textColor="@color/link"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>